-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4
-
None
Video frame converter invoked by frame.toImage() crashes when working with video frame textures on a different thread than the thread rendering pictures from QVideoOutput.
Example app
#include <QApplication> #include <QMediaPlayer> #include <QVideoFrame> #include <QVideoWidget> #include <QVideoSink> #include <QWindow> #include <QThread> #include <QTimer> #include <QLabel> #include <QPixmap> class SecondThread : public QThread { Q_OBJECT public slots: void convertFrame(const QVideoFrame &frame) { emit newImage(frame.toImage()); } signals: void newImage(const QImage &img); }; int main(int argc, char *argv[]) { QApplication a(argc, argv); QLabel label; label.show(); QVideoWidget widget; widget.show(); QMediaPlayer player; player.setVideoOutput(&widget); QTimer::singleShot(500, [&](){ player.setSource(QUrl("somemovie.mp4")); player.play(); }); SecondThread t2; t2.start(); t2.moveToThread(&t2); QObject::connect(widget.videoSink(), &QVideoSink::videoFrameChanged, &t2, &SecondThread::convertFrame); QObject::connect(&t2, &SecondThread::newImage, &a, [&](const QImage &img){ label.setPixmap(QPixmap::fromImage(img)); }); return a.exec(); } #include "main.moc"
- covers
-
QTBUG-97789 Listening on QVideoSink::videoFrameChanged on Android fails to map/unmap QVideoFrame
-
- Closed
-
- relates to
-
QTBUG-113327 QVideoFrame::map() segfaults on 32bit android
-
- Closed
-
For Gerrit Dashboard: QTBUG-105169 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
422847,12 | Export textures in a bundle as QVideoFrameTextures to requesting QRhi | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
425127,6 | Run Android video output from a dedicated thread and shared OpenGL ctx | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
434073,3 | Export textures in a bundle as QVideoFrameTextures to requesting QRhi | 6.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
434074,3 | Share OpenGL context between frame convereter and textures context | 6.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
434075,4 | Run Android video output from a dedicated thread and shared OpenGL ctx | 6.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |