Share OpenGL context between frame convereter and textures context

When frame converter works with an OpenGL texture owned by foreign QRhi
it should set up its own QRhi to share OpenGL context with the foreign
QRhi. Otherwise, it will not have access to the texture data.

Task-number: QTBUG-105169
Change-Id: If4b424b436fe4b29f082dac92aabe3c6c27cd75e
Reviewed-by: André de la Rocha <andre.rocha@qt.io>